Add a makefile for sugar3/cordova

--- a/configure.ac
+++ b/configure.ac
@@ -44,6 +44,7 @@ src/sugar3/presence/Makefile
 src/sugar3/datastore/Makefile
 src/sugar3/dispatch/Makefile
 src/sugar3/test/Makefile
+src/sugar3/cordova/Makefile
 src/sugar3/config.py
 po/Makefile.in
 ])
