Pythonization of some code files
This commit should NOT be merged into sugarlabs:master, as this should be
rebased into a more sensable overall commit scheme for the whole pull request.

--- a/src/sugar3/cordova/Makefile.am
+++ b/src/sugar3/cordova/Makefile.am
@@ -3,7 +3,7 @@ sugar_PYTHON =              \
 	__init__.py             \
 	accelerometer.py		\
 	camera.py				\
-	cordovaSocket.py		\
+	cordovasocket.py		\
 	device.py				\
 	dialog.py				\
 	globalization.py		\
