--- a/src/sugar3/cordova/Makefile.am
+++ b/src/sugar3/cordova/Makefile.am
@@ -3,7 +3,7 @@ sugar_PYTHON =              \
 	__init__.py             \
 	accelerometer.py		\
 	camera.py				\
-	cordovasocket.py		\
+	cordovaSocket.py		\
 	device.py				\
 	dialog.py				\
 	globalization.py		\
